concert-demo/blue-bank/src/chat-loadgen/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-loadgen
  namespace: demoapps-bank-anthos
  labels:
    app: chat-loadgen
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
    name: web
  selector:
    app: chat-loadgen

# Made with Bob
